style/sitestatus.css
#shadow-table, .shadow-rs-table th {
  text-align: left;
  padding-right: 20px;
  border-collapse: collapse;
  /*table-layout: fixed;*/
  width: 100%;
}

/* Keep 2nd, 3rd and 4th columns (Reset button, load icon and arrow icon) of shadows table
   only the content width */
   tr.view > td:nth-child(2), tr.view > td:nth-child(3), tr.view > td:nth-child(4) {
  width:1%;
  white-space: nowrap;
}


tr.view:hover {
  background-color: #007CBA;
  color: white;
  transition: 0.5s;
}

th, td {
  padding: 5px;
}

.fold {
  display: none;
}

.open {
  display: table-row;
}

.closed-icon span:before {
  font: normal 13px/1 dashicons;
  content: " \f347";
}

.open-icon span:before {
  font: normal 13px/1 dashicons;
  content: " \f343";
}

.shadow-row table th {
  text-align: left;
  padding-right: 20px;
}

.shadow-hidden {
  display: none;
}

#shadow-selector {
  width: 100%;
  margin-bottom: 10px;
}

#shadow-reset {
  margin-top: 10px;
}

.data-actions th, .data-actions td {
  padding-top: 10px;
}

#shadow-data-actions {
  padding: 15px;
}

#shadow-rs-table {
  margin: 20px 0 5px 0;
}

.shadow-reset-row {
  margin-top: 20px;
}

#shadow-reset {
  margin: 0;
}

.alert {
  display: none;
  color: #FFFFFF;
  border-radius: 2px;
  margin-bottom: 10px;
  padding: 10px;
}

.alert > p > a {
  color: white;
}

.alert > p > a:hover {
  color: #00A3E4;
}

.shadow-reset-sr-alert.alert {
  padding: 0px;
}

#alert-success {
  background-color: #6aa84f;
}

#alert-failure, #alert-error {
  background-color: #cc0000;
}

#alert-timeout {
  background-color: yellow;
  color: black;
}

.closebtn {
  font-size: large;
  color: white;
  float: right;
  background-color: transparent;
  border: none;
  padding: 10px;
}

.closebtn:hover {
  color: black;
}

.seravo-site-check-success-box {
  padding: 10px;
  border: 1.5px solid#ccd0d4;
  border-left: solid 0.3em #038103;
  border-bottom: none;
}
.seravo-site-check-issue-box {
  padding: 10px;
  border: 1.5px solid#ccd0d4;
  border-left: solid 0.3em red;
  border-bottom: none;
}

.seravo-cache-test-result-wrapper,
.seravo-site-check-result-wrapper {
  -moz-transition: border 1s ease-in;
  -o-transition: border 1s ease-in;
  -webkit-transition: border 1s ease-in;
  background-color: white;
  border-left: solid 0.5em #e8ba1b;
  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.12);
  display: block;
  margin-top: 2em;
  max-width: 55em;
  min-height: 5em;
  overflow: hidden;
  transition: border 1s ease-in;
}

.seravo-cache-test-result,
.seravo-site-check-result {
  box-shadow: 0 1px 1px 1px rgba(0,0,0,0.2);
  display: none;
  margin: 1em;
  max-height: 30em;
  padding: 1em;
}

.seravo-site-check-result {
  padding: 2em;
}

.seravo-cache-test-result {
  overflow: auto;
}

.seravo_cache_tests_status,
.seravo_site_check_status {
  font-size: 15px;
  font-weight: bold;
  margin-top: 1.6em;
  margin-left: 0.5em;
  padding-bottom: 7px;
  text-align: center;
}

.seravo_cache_test_show_more_wrapper,
.seravo_site_check_show_more_wrapper {
  -ms-transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  float: right;
  height: 1em;
  margin-right: 0.5em;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.seravo_cache_test_show_more,
.seravo_site_check_show_more,
.seravo_cache_test_show_more:hover,
.seravo_site_check_show_more:hover,
.seravo_cache_test_show_more:active,
.seravo_site_check_show_more:active,
.seravo_cache_test_show_more:focus,
.seravo_site_check_show_more:focus {
  box-shadow: none;
  color: inherit;
  text-decoration: none;
}

.disk_usage_desc {
  display: block;
  padding-top: 3vh;
  height: 9vh;
  width: 60%;
}

#disk_use_notification {
  color: #cc0000;
}

#redis-hit-rate-chart,
#http-hit-rate-chart {
  margin-left: -15px;
  margin-top: -30px;
}

.tooltip {
  position: relative;
  padding-left: 5px;
  content: "\f348";
}

#seravo_site_check .tooltip {
  padding-left: 0px;
  margin-right: 5px;
}

.tooltip .tooltiptext {
  font-size: 0.6em;
  visibility: hidden;
  width: 130px;
  background-color: #555555;
  color: #fff;
  text-align: center;
  border-radius: 5px;
  padding: 8px;
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -60px;
  opacity: 0;
  transition: opacity 0.3s;
  line-height: 1.3;
  font-family: sans-serif;
}

.tooltip .tooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555555 transparent transparent transparent;
}

.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

.dashicons-info {
  color: #b1b2b3;
}
.speed_test_input {
  width: 50%;
}

.speed_test_form {
  padding: 10px;
}

.bars_container {
  max-height: 700px;
  overflow-y: scroll;
  overflow-x: hidden;
  padding-right: 15px;
}

.arrow_box {
  font-size: 11px;
  padding: 3px;
}

#run-speed-test {
  margin-top: 10px;
}

